--- a/languages/ci/locale/hu_HU/LC_MESSAGES/auberge_lang.po
+++ b/languages/ci/locale/hu_HU/LC_MESSAGES/auberge_lang.po
@@ -3,10 +3,9 @@ msgstr ""
 "Project-Id-Version: home 2\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2013-02-18 16:12+0200\n"
-"PO-Revision-Date: 2013-02-17 14:15+0200\n"
+"PO-Revision-Date: 2013-02-18 21:43+0200\n"
 "Last-Translator: Iana <hrapulya@gmail.com>\n"
 "Language-Team: English\n"
-"Language: \n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -4487,7 +4486,7 @@ msgstr "Hálótermekben a csoporttal"
 #: ../code/application/views/helpfile/pofields.php:568
 #, php-format
 msgid "Total Number of people in your group: %s"
-msgstr ""
+msgstr "A csoport összlétszáma: %s"
 
 #: ../code/application/views/group_request.php:206
 #: ../code/application/views/group_request.php:212
@@ -5607,9 +5606,9 @@ msgid "Fun"
 msgstr "Szorakozás"
 
 #: ../code/application/views/helpfile/pofields.php:293
-#, fuzzy, php-format
+#, php-format
 msgid "Payer seulement 10%% maintenant"
-msgstr "Most csak 10%-át fizesse ki"
+msgstr "Most csak 10%%-át fizesse ki"
 
 #: ../code/application/views/helpfile/pofields.php:294
 #, php-format
@@ -6737,13 +6736,13 @@ msgstr ""
 "szüksége erre a foglalásra, kérjük, azonnal jelezze."
 
 #: ../code/application/views/helpfile/pofields.php:581
-#, fuzzy, php-format
+#, php-format
 msgid ""
 "We want to make sure you are 100%% satisfied, so do not hesitate to contact "
 "us."
 msgstr ""
-"Biztosak akarunk lenni abban, hogy Ön 100 %%-ig elégedett.  Kérjük, "
-"nyugodtan vegye fel velünk a kapcsolatot."
+"Biztosak akarunk lenni abban, hogy Ön 100%%-ig elégedett.  Kérjük, nyugodtan "
+"vegye fel velünk a kapcsolatot."
 
 #: ../code/application/views/helpfile/pofields.php:583
 #, php-format
@@ -6872,14 +6871,14 @@ msgstr ""
 "mezőben adja meg a dátumot."
 
 #: ../code/application/views/helpfile/pofields.php:604
-#, fuzzy, php-format
+#, php-format
 msgid "Selected filters:"
-msgstr "Megadott keresési feltételek"
+msgstr "Megadott keresési feltételek:"
 
 #: ../code/application/views/helpfile/pofields.php:605
-#, fuzzy, php-format
+#, php-format
 msgid "Total Number of people in your groups: %s"
-msgstr "A csoport összlétszáma"
+msgstr "A csoport összlétszáma: %s"
 
 #: ../code/application/views/helpfile/pofields.php:606
 #, php-format
@@ -6892,9 +6891,9 @@ msgid "The request cannot be fulfilled due to bad syntax"
 msgstr ""
 
 #: ../code/application/views/helpfile/pofields.php:608
-#, fuzzy, php-format
+#, php-format
 msgid "Your changes has been saved successfully"
-msgstr "Az Ön támogatási kérelme sikeresen elküldve."
+msgstr "A módosítások sikeresen elmentve"
 
 #: ../code/application/views/home_view.php:15
 msgid "30,000 Auberges et logements pas chers"
