Added translation strings

--- a/languages/ci/locale/ja_JP/LC_MESSAGES/auberge_lang_ho.po
+++ b/languages/ci/locale/ja_JP/LC_MESSAGES/auberge_lang_ho.po
@@ -3,7 +3,7 @@ msgstr ""
 "Project-Id-Version: Auberges\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2013-02-18 16:12+0200\n"
-"PO-Revision-Date: 2013-02-18 23:35+0200\n"
+"PO-Revision-Date: 2013-02-19 22:18+0200\n"
 "Last-Translator: Iana <hrapulya@gmail.com>\n"
 "Language-Team: \n"
 "MIME-Version: 1.0\n"
@@ -2495,7 +2495,7 @@ msgstr "予約確定のためのデポジットは返金、譲渡不可となり
 #: ../code/application/views/restricted/user_group_quote.php:287
 #, php-format
 msgid "If the offer is accepted, the balance must be paid on %s"
-msgstr ""
+msgstr "ご予約完了後、残金は までにお支払ください。%s"
 
 #: ../code/application/views/restricted/user_group_quote.php:299
 msgid "Special Notes"
@@ -6244,12 +6244,12 @@ msgstr "お客様のグループの総予約人数: %s"
 #: ../code/application/views/helpfile/pofields.php:606
 #, php-format
 msgid "If the offer is accepted, the balance must be paid by %s"
-msgstr ""
+msgstr "ご予約完了後、残金は までにお支払ください。%s"
 
 #: ../code/application/views/helpfile/pofields.php:607
 #, php-format
 msgid "The request cannot be fulfilled due to bad syntax"
-msgstr ""
+msgstr "コードエラーのためリクエストは完了できません"
 
 #: ../code/application/views/helpfile/pofields.php:608
 #, php-format
