--- a/languages/ci/locale/ko_KR/LC_MESSAGES/auberge_lang.po
+++ b/languages/ci/locale/ko_KR/LC_MESSAGES/auberge_lang.po
@@ -3,7 +3,7 @@ msgstr ""
 "Project-Id-Version: home 2\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2013-02-18 16:12+0200\n"
-"PO-Revision-Date: 2013-02-18 23:25+0200\n"
+"PO-Revision-Date: 2013-02-19 22:22+0200\n"
 "Last-Translator: Iana <hrapulya@gmail.com>\n"
 "Language-Team: English\n"
 "MIME-Version: 1.0\n"
@@ -2494,7 +2494,7 @@ msgstr "예약금은 환불이 불가하며 타인에게 양도될 수 없습니
 #: ../code/application/views/restricted/user_group_quote.php:287
 #, php-format
 msgid "If the offer is accepted, the balance must be paid on %s"
-msgstr ""
+msgstr "제안이 승인되면, 잔액은 일까지 지불하셔야합니다 %s"
 
 #: ../code/application/views/restricted/user_group_quote.php:299
 msgid "Special Notes"
@@ -6243,12 +6243,12 @@ msgstr "귀하의 단체 총인원수: %s"
 #: ../code/application/views/helpfile/pofields.php:606
 #, php-format
 msgid "If the offer is accepted, the balance must be paid by %s"
-msgstr ""
+msgstr "제안이 승인되면, 잔액은 일까지 지불하셔야합니다 %s"
 
 #: ../code/application/views/helpfile/pofields.php:607
 #, php-format
 msgid "The request cannot be fulfilled due to bad syntax"
-msgstr ""
+msgstr "요청이 잘못된 구문으로 인해 이루어질 수 없습니다."
 
 #: ../code/application/views/helpfile/pofields.php:608
 #, php-format
